src/components/Auth/Auth.module.css
/* ... */
.loginSection .loginWrap .loginHtml .loginForm .loginHeading .loginSubHeading,
.loginSection .loginWrap .logOutHtml .loginForm .logOutHeading .logOutSubHeading {
    font-size: 16px;
    color: #B5B5B6;
    margin-top: 8px;
    margin-bottom: 30px;
    text-align: center;
    font-weight: 400;
    line-height: 24px;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group {
    width: 100%;
    margin-bottom: 15px;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .input-group-prepend {
    margin-right: -1px;
    display: flex;
}

.loginSection .loginWrap .loginHtml .verifyUser .loginForm .fielderror {
    background: #232324;
    margin-bottom: 10px !important;
    border-radius: 6px;
    padding: 8px 16px;
}

.registered {
    padding: 16px 0 8px;
    color: #B5B5B6;
    font-size: 14px;
    line-height: 22px;
    font-weight: 400;
}

.fielderror .registered {
    display: flex !important;
    align-items: center !important;
    padding: 0;
    color: #FF3E5B;
    font-size: 14px;
    line-height: 24px;
    font-weight: 500;
}

.fielderror .registered :global .ant-checkbox:not(.ant-checkbox-checked)+span,
.fielderror .registered :global .ant-checkbox:not(.ant-checkbox-checked)+span p {
    color: #858585 !important;
}

.fielderror .registered p {
    padding-left: 0px !important;
    color: #FF3E5B;
}

.fielderror .registered :global .ant-checkbox-checked:checked {
    background-color: transparent !important;
}

.registered :global .ant-checkbox .ant-checkbox-inner {
    width: 18px;
    height: 18px;
    background-color: transparent;
    border: 1px solid #838383;
}

.registered :global .ant-checkbox-checked .ant-checkbox-inner {
    border-color: #838383 !important;
}

.registered :global .ant-checkbox-wrapper-checked:not(.ant-checkbox-wrapper-disabled):hover .ant-checkbox-inner,
.registered :global .ant-checkbox-checked:not(.ant-checkbox-disabled):hover .ant-checkbox-inner {
    background-color: transparent !important;
}

.registered :global .ant-checkbox .ant-checkbox-inner:after {
    top: 48%;
    inset-inline-start: 35%;
    width: 4px;
    height: 7px;
    border: 1px solid red;
    border-top: 0;
    border-inline-start: 0;
}

.registered :global .ant-checkbox-checked:after {
    border: 1px solid #ff3e5b !important;
    background-color: transparent !important;
}

:global .ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover .ant-checkbox-checked:not(.ant-checkbox-disabled) .ant-checkbox-inner {
    background-color: transparent !important;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .input-group-prepend .input-group-text {
    background: none;
    color: #fff;
    border: none;
    border-bottom: 1px solid #fff;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .input-group-prepend .input-group-text i {
    color: #fff;
    text-decoration: none;
}

.fielderror {
    min-height: 0px !important;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .input,
.loginSection .loginWrap .loginHtml .loginForm .input-group .input:focus,
.loginSection .loginWrap .loginHtml .loginForm .input-group .input:active {
    background: none;
    border: none;
    border-bottom: 1px solid #fff;
    box-shadow: none !important;
    color: #fff;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .label,
.loginSection .loginWrap .loginHtml .loginForm .input-group .button {
    text-transform: uppercase;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .button,
.loginSection .loginWrap .logOutHtml .loginForm .button {
    width: 100%;
    color: #fff;
    display: block;
    background: #FF3E5B;
    cursor: pointer;
    border-radius: 5px;
    border: none;
    padding: 10px;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .logininputLabel {
    color: #fff;
    font-size: 16px !important;
    margin: 4px 0 0 10px;
}

.loginSection .loginWrap .loginHtml .loginForm .input-group .inputOTP {
    width: 13%;
    color: #fff;
    display: block;
    padding: 10px 0px;
    background: none;
    border: none;
    border-bottom: 1px solid #fff;
    float: left;
    text-align: center;
    margin: 0 3px;
}

.loginSection .loginWrap .loginHtml .loginForm .forgotPasswordLink {
    font-size: 12px;
    line-height: 20px;
    font-weight: 600;
    text-align: right;
    width: 100%;
    margin-top: -16px;
    /* margin-bottom: 10px; */
}

.loginSection .loginWrap .loginHtml .loginForm .forgotPasswordLink a {
    color: #FF3E5B !important;
}

.loginSection .loginWrap .loginHtml .loginForm .forgotPasswordLink a:hover {
    text-decoration: underline;
}

.loginSection .loginWrap .loginHtml .loginForm .loginFooter {
    color: #FF3E5B;
    text-align: center;
    font-size: 14px;
    line-height: 22px;
    font-weight: 600;
    width: 100%;
    margin-top: 20px;
}

.loginSection :global .ant-form-item .ant-form-item-explain-error {
    color: #ED302D;
    line-height: 18px;
    font-weight: 400;
}

.loginSection .loginWrap .loginHtml .loginForm .loginFooter a {
    font-size: 14px;
    font-weight: 600;
    line-height: 24px;
    color: #FF3E5B;
    text-align: center;
}

.loginSection .loginWrap .loginHtml .loginForm .loginFooter a:hover {
    text-decoration: underline;
}

.form-control {
    display: block;
    width: 100%;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.form-control::-ms-expand {
    background-color: transparent;
    border: 0;
}

.form-control:focus {
    color: #495057;
    background-color: #fff;
    border-color: #80bdff;
    outline: 0;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.form-control::-moz-placeholder {
    color: #6c757d;
    opacity: 1;
}
/* ... */

